--- a/index.html
+++ b/index.html
@@ -5,12 +5,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Cipher Cesar</title>
+  <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <title>Encryption Cesar</title>
 </head>
 
 <body>
-  <script src="js/app.js"></script>
+  <div class="container height">
+    <div class="col-12 col-sm-7 ">
+      <h2 class="text-center white-letter2">Encryption Cesar!</h2>
+      <br>
+      <div class="form-group white-letter2">
+        <label>Write you message here!</label>
+        <input type="text" class="form-control" id="inputMessage">
+      </div>
+      <div>
+        <button type="button" class="btn btn-success" id="cipherMessage">Cipher</button>
+      </div>
+      <br>
+      <div class="form-group white-letter2">
+        <label>Write you message here!</label>
+        <input type="text" class="form-control" id="inputMessage2">
+      </div>
+
+      <div>
+        <button type="button" class="btn btn-success" id="decipherMessage">Decipher</button>
+
+        <br>
+        <br>
+        <div class="white-letter" id="showCipher">
+        </div>
+
+        <div>
+          <hr>
+          <button class="btn btn-warning" id="clear">Replay</button>
+        </div>
+        <div class=" col-12 col-sm-5">
+          <img src="assets/images/Message (1).gif" class="img-fluid hidden-xs" alt="hi">
+        </div>
+      </div>
+    </div>
+    <script src="vendors/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
